Enable -Wuser-defined-warnings for Chromium code, and fix errors.

Bug: 683349
Change-Id: I0255db2b78489d4b5eb2462273eab634d71e6e30